<resources>
    <string name="app_name">PGA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_title">Create\nYOUR\nAccount</string>
    <string name="menu_home">Home</string>
    <string name="menu_PW">Forgot password</string>
    <string name="menu_help">Help</string>
    <string name="menu_read_file">Help</string>
    <string name="menu_slideshow">Forgot password</string>
    <string name="name_">Name:</string>
    <string name="gender">Gender:</string>
    <string name="Email">E-mail:</string>
    <string name="Password">Password:</string>
    <string name="retypePassword">Retype password:</string>
    <string name="phone">Phone number:</string>
    <string name="send">send</string>
    <string name="login_title">WELCOME\nSFC\n\nNOW</string>
    <string name="login_title2">use your biometric to login</string>
    <string name="ball_text">0%</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="gender_prompt">Choose your gender</string>
    <string name="pw_hint">Input your \n ID,Product key.</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>