<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:background="#FFFFFFFF"
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            android:textAppearance="@style/read_file"
            />
        <item
            android:background="#FFFFFFFF"
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/forgot_pw"
            android:title="@string/menu_PW"
            android:textAppearance="@style/read_file"
            />
        <item
            android:background="#FFFFFFFF"
            android:id="@+id/nav_gallery"
            android:icon="@drawable/help"
            android:title="@string/menu_help"
            android:textAppearance="@style/read_file"
            />


    </group>

</menu>